# ESP32_FlashDB

./: .gitignore  CMakeLists.txt  FlashDB_ESP32_Guide.md  FlashDB_Proper_Porting_Plan.md  README.md  partitions.csv
components/FlashDB/: CMakeLists.txt  README.md
components/FlashDB/inc/: fal_cfg.h  fdb_cfg.h
components/FlashDB/port/: fal_flash_esp32_port.c
main/: CMakeLists.txt  main.c
samples/: tsdb_sample.c
